# ibus

./: .gitignore  .travis.yml  Makefile.am  autogen.sh  codereview.settings  config.h.meson  configure.ac  meson-dist.py  meson.build  meson.config  meson.options
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/hooks/: commit-msg  ibus-commit-common  post-merge
.github/workflows/: main.yml
bindings/: meson.build
bindings/pygobject/: Makefile.am  meson.build  test-deserialize.py  test-override-ibus.py
bindings/pygobject/gi/overrides/: IBus.py
bindings/vala/: IBus-1.0-custom.vala  Makefile.am  config.vapi  dbus-1.vapi  gdk-wayland.vapi  glibmacro.vapi  meson.build
bus/: Makefile.am  connection.h  dbusimpl.c  engineproxy.c  engineproxy.h  ibusimpl.c  ibusimpl.h  inputcontext.c  inputcontext.h  main.c  marshalers.list  matchrule.c  matchrule.h  meson.build  panelproxy.c  panelproxy.h  server.c  test-matchrule.c  test-stress.c
bus/services/: meson.build  org.freedesktop.IBus.session.GNOME.service.in  org.freedesktop.IBus.session.generic.service.in
client/gtk2/: Makefile.am  ibusim.c  ibusimcontext.c  iconwidget.c  iconwidget.h  meson.build
client/gtk3/: Makefile.am  meson.build
client/gtk4/: Makefile.am  ibusim.c  iconwidget.c  iconwidget.h  meson.build
client/wayland/: IBusWaylandIM-1.0.metadata  Makefile.am  ibus-wayland-im-custom.vala  ibuswaylandim.c  ibuswaylandim.h  input-method-unstable-v1-client-protocol.h  input-method-unstable-v1-protocol.c  input-method-unstable-v2-client-protocol.h  main.c  meson.build  text-input-unstable-v1-client-protocol.h
client/x11/: main.c  meson.build
conf/: meson.build
conf/memconf/: meson.build
data/dconf/: Makefile.am  make-dconf-override-db.sh  meson.build  org.freedesktop.ibus.gschema.xml
docs/reference/ibus/: Makefile.am  meson.build
engine/: Makefile.am  gensimple.py  main.vala  meson.build  simple.xml.in  test-dead.py  test-gnome.py
m4/: Makefile.am
po/: LINGUAS  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  fi.po  fr.po  he.po  ibus10.pot  id.po  it.po  ja.po  ka.po  kab.po  ko.po  pa.po  pl.po  pt_BR.po  ru.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
portal/: meson.build  org.freedesktop.IBus.Portal.xml  portal.c
setup/: Makefile.am  enginedialog.py  main.py  meson.build
src/: Makefile.am  emoji-parser.c  gencomposetable.c  ibus-visibility.h  ibus.gresources.xml.in  ibusaccelgroup.c  ibusattribute.c  ibusattribute.h  ibusattrlist.c  ibusattrlistprivate.h  ibusbus.c  ibusbus.h  ibuscomponent.c  ibuscomposetable.c  ibuscomposetable.h  ibusemoji.c  ibusengine.c  ibusengine.h  ibusenginesimple.c  ibusenginesimple.h  ibusenginesimpleprivate.h  ibusenumtypes.c.template  ibusenumtypes.h.template  ibusinputcontext.c  ibusinputcontext.h  ibusinternal.h  ibuskeynames.c  ibuskeys.c  ibuskeys.h  ibuskeysyms.h  ibuskeyuni.c  ibuslookuptable.c  ibusmarshalers.list  ibusmessage.c  ibusmessage.h  ibusobservedpath.c  ibuspanelservice.c  ibuspanelservice.h  ibusproperty.c  ibusproplist.c  (+15 more)
src/compose/: Makefile.am  meson.build  sequences-big-endian  sequences-little-endian
src/tests/: 100-ibus-ci.rules  Makefile.am  ibus-bus.c  ibus-compose-locales.in  ibus-compose.basic  ibus-compose.basic2  ibus-compose.c  ibus-compose.emoji  ibus-compose.env  ibus-compose.usmin  ibus-compose.usmin2  ibus-desktop-testing-autostart.in  ibus-desktop-testing-module  ibus-desktop-testing-runner.in  ibus-desktop-testing.desktop.in  ibus-engine-switch.c  ibus-keypress-data.h  ibus-keypress.c  ibus-keyval.c  ibus-registry.c  ibus-share.c  ibus-sudoers.conf.in  ibus-util.c  libinput-test.yml  meson.build  meta.test.in  runtest  uinput-replay-test.sh.in  uinput-replay.c  uinput-replay.h  xkb-latin-layouts
test/: org.test.IBus.Fedoraproject.json  org.test.IBus.Freedesktop.json  org.test.IBus.GNOME.json
tools/: IBusIMModule-1.0.metadata  Makefile.am  ibus.1.in  ibusimmodule.c  ibusimmodule.h  krcfile.vala  main.vala  meson.build
ui/gtk2/: i18n.py
ui/gtk3/: Makefile.am  application.vala  bindingcommon.vala  candidatearea.vala  candidatepanel.vala  emojier.vala  extension.vala  handle.vala  ibus-emoji.7.in  ibus-ui-wayland.desktop.in  iconwidget.vala  indicator.vala  keybindingmanager.vala  meson.build  message.vala  notification-item.xml  panel.vala  panelbinding.vala  property.vala  propertypanel.vala  switcher.vala  xkblayout.vala
util/IMdkit/: FrameMgr.c  Xi18n.h  XimProto.h  i18nIc.c  i18nMethod.c  i18nOffsetCache.c  i18nPtHdr.c
